# learner

./: .dockerignore  .env.example  .env.prod.example  .gitignore  CLAUDE_AGENTS.md  DEPLOYMENT.md  Dockerfile  How it works.md  Login_rror.txt  Makefile  NLP_AND_GAPS_PLAN.md  README.md  USER_GUIDE.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  migrate.py  prd_learning_system.docx  pyproject.toml  reset_db.py  test_enum_conversion.py  validate_phase4.py
.claude/: settings.local.json
.github/workflows/: fly.yml
agent-a/.claude/: settings.local.json
alembic/: README  env.py
migrations/: 001_initial_schema.sql  002_security_constraints.sql  003_vector_index.sql  004_learning_context.sql  005_onboarding_state.sql  006_agent_handoff_context.sql
nginx/: nginx.conf
prompts/: README.md
prompts/assessment/: adaptive_difficulty.txt  feynman_evaluation.txt  quiz_generation.txt
prompts/coach/: recovery_plan.txt  session_closing.txt  session_opening.txt
prompts/curriculum/: learning_path.txt  next_topic.txt
prompts/drill_sergeant/: skill_building_project.txt  targeted_practice.txt
prompts/scout/: content_relevance.txt  content_summarization.txt
prompts/socratic/: analogy_testing.txt  confused_student.txt  connection_building.txt  probe_deeper.txt  strategic_questioning.txt  test_understanding.txt
scripts/: deploy.sh
src/api/: __init__.py  dependencies.py  main.py
src/cli/: __init__.py  main.py  nlp_parser.py  state.py
src/jobs/: __init__.py  scheduler.py  tasks.py
src/shared/: __init__.py  audit.py  config.py  constants.py  database.py  datetime_utils.py  dto.py  exceptions.py  feature_flags.py  models.py  repository.py  service_registry.py
tests/: __init__.py  conftest.py  verify_auth.py
tests/integration/: test_assessment_flow.py  test_auth_flow.py  test_content_pipeline.py  test_nlp_flow.py  test_session_flow.py
tests/security/: __init__.py  test_nlp_security.py
tests/unit/: test_adaptation.py  test_agents.py  test_assessment_service.py  test_auth.py  test_content.py  test_database_persistence.py  test_embeddings.py  test_feature_flags.py  test_monitoring.py  test_session.py  (+8 more)
(+98 files in other folders)
